# vela

./: .dockerignore  .gitignore  BENCHMARKS.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  fly.toml  state_manager_patch.py
.github/workflows/: ci.yml
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/: form.template
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/Trace1.run/: RunIssues.storedata
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/corespace/run1/core/core-config/: exposedTableInfo.plist
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/corespace/run1/core/stores/indexed-store-1/: bulkstore  spindex.0
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/corespace/run1/core/stores/indexed-store-10/: bulkstore  spindex.0
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/corespace/run1/core/stores/indexed-store-14/: bulkstore  spindex.0
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/corespace/run1/core/stores/indexed-store-15/: bulkstore  spindex.0
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/corespace/run1/core/stores/indexed-store-17/: bulkstore  spindex.0
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/corespace/run1/core/table-manager/: tables.plist
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/corespace/run1/core/uniquing/: strings
Launch_matching-a51bd83e5bcec25f_2026-04-14_18.42.10_A606575F.trace/symbols/stores/: 104EC1C1-C776-3855-8707-C0797CEC56FF.symbolsarchive  530FC11D-A495-375D-B2B9-81AE3E701781.symbolsarchive  8A4825B5-E480-3A53-B35B-B90DCB34EE46.symbolsarchive  9F5BD98B-9367-3594-933B-16F392C2A5F8.symbolsarchive  9FE7C84D-0C2B-363F-BEE5-6FD76D67A227.symbolsarchive  A64128D9-375B-36AE-8FEB-69D80F987D3C.symbolsarchive  B50F5A1A-BE81-3068-92E1-3554F2BE478A.symbolsarchive
api/: Cargo.toml
api/src/: anchor.rs  auth.rs  da.rs  feeds.rs  handler.rs  lib.rs  main.rs  mm.rs  rate_limit.rs  snapshot.rs  types.rs  wal.rs  ws.rs
api/tests/: api_tests.rs  wal_tests.rs
benches/: Cargo.toml
benches/benches/: matching.rs
cargo-flamegraph.trace/: form.template
cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
cargo-flamegraph.trace/corespace/run1/core/core-config/: exposedTableInfo.plist
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-18/: bulkstore  spindex.0
cargo-flamegraph.trace/corespace/run1/core/table-manager/: tables.plist
committer/: Cargo.toml
committer/src/: batch.rs  committer.rs  da.rs  forced_inclusion.rs  handle.rs  lib.rs
committer/tests/: committer_tests.rs  da_tests.rs  forced_inclusion_tests.rs
contracts/: deployments.json
contracts/broadcast/Deploy.s.sol/11155111/: run-latest.json
contracts/script/: Deploy.s.sol
contracts/src/: VelaSettlement.sol
contracts/test/: VelaSettlement.t.sol
docs/: api.md  architecture.md  credit-system.md  docs.json  index.mdx  mint.json
docs/api-reference/: authentication.mdx  errors.mdx  http.mdx  introduction.mdx  websocket.mdx
docs/architecture/: da-layer.mdx  forced-inclusion.mdx  matching-engine.mdx  state-layer.mdx  zk-vm.mdx
docs/engine/: copy-on-write.mdx  fee-framework.mdx  hft-nonces.mdx
docs/getting-started/: connect-wallet.mdx  deposit.mdx  first-order.mdx  order-status.mdx
docs/introduction/: architecture.mdx  changelog.mdx  what-is-vela.mdx  whitepaper.mdx
docs/market-making/: api-guide.mdx  credit-system.mdx  dashboard.mdx  overview.mdx  private-feeds.mdx
docs/resources/: changelog.mdx  faq.mdx  roadmap.mdx
docs/security/: ecdsa.mdx  fraud-proofs.mdx  trust-model.mdx
docs/trading/: fees.mdx  order-book.mdx  order-types.mdx  referrals.mdx  time-in-force.mdx
docs/transparency/: websocket.mdx
engine/: Cargo.toml
engine/benches/: matching_engine_bench.rs
engine/src/: cow_cache.rs  credit.rs  delta_buffer.rs  lib.rs  matching_engine.rs  order_book.rs
engine/tests/: matching_tests.rs
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/batches/: page.tsx
frontend/app/batches/[id]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/decisions/: page.tsx
frontend/app/deposit/: page.tsx
frontend/app/design/: page.tsx
frontend/app/docs/: layout.tsx  page.tsx
frontend/app/docs/[...slug]/: page.tsx
frontend/app/history/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/market-makers/register/: page.tsx
frontend/app/markets/: page.tsx
frontend/app/markets/[pair]/: page.tsx
frontend/app/operator/: page.tsx
frontend/app/orders/[id]/: page.tsx
frontend/app/proofs/: page.tsx
frontend/app/status/: page.tsx
frontend/app/tee/: page.tsx
frontend/app/transparency/: page.tsx
frontend/app/transparency-score/: page.tsx
frontend/app/verify/: page.tsx
frontend/app/withdraw/: page.tsx
frontend/components/: FrescoCanvas.tsx  HeroOrderBook.tsx  HexCanvas.tsx  Nav.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  Spinner.tsx  Tooltip.tsx  index.ts
frontend/lib/: api.ts  auth.tsx  contract.ts  markets.ts  prices.ts  signing.ts  transparency-score.ts  ws.ts
frontend/types/: ethereum.d.ts
scripts/: run_benchmarks.sh
state/: Cargo.toml
state/src/: cache.rs  keys.rs  lib.rs  manager.rs  mpt.rs  smt.rs
state/tests/: cache_tests.rs  mpt_fuzz_tests.rs
tee/: Cargo.toml
tee/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs
zkvm/: Cargo.toml
zkvm/src/: lib.rs  optimistic.rs  prover.rs
(+34 files in other folders)
