[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
types = { workspace = true }
engine = { workspace = true }
zkvm = { path = "../zkvm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
axum-test = { version = "15", features = ["ws"] }
tokio = { workspace = true }
