[package]
name = "committer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
engine = { workspace = true }
state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
types = { workspace = true }
engine = { workspace = true }
state = { workspace = true }
